--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.1",
+    "react-date-range": "^1.0.3",
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
